--- a/style.sass
+++ b/style.sass
@@ -1,39 +1,82 @@
 *
     margin: 0
     padding: 0
+body
+    font-family: sans-serif
 a
     text-decoration: none
     color: #121212
     font-family: sans-serif
-li
-    background-color: pink
-    position: relative
-    >a
-        background-color: #EB5757
-        line-height: 48px
-        width: 48px
-        position: absolute
-        right: 0
-        top: 0
-    p
-        float: left
-        line-height: 48px
-
-    .participantInfo
-        z-index: 5
-        padding: 0 20px
-        overflow: hidden
+h1
+    color:#282C32
+    padding: 48px 24px 24px
+    background-color: white
+    position: fixed
+    width: 100%
+    line-height: 24px
+    font-size: 24px
+    top: 0
+    z-index: 7
+p
+    color: #282C32
+    padding: 0px 24px 24px
+    font-size: 12px
+.topParagraph
+    margin-top: 120px
+.smallParagraph
+    font-size: 10px
+    line-height: 14px
+    padding-bottom: 4px
+.linkParagraph
+    background-color: #F4F6FF
+    font-size: 12px
+    line-height: 14px
+    padding: 21px 12px
+    margin: 0 24px 24px
+    text-align: center
+    border-radius: 8px
+ul
+    background-color: #F4F6FF
+    li
+        // background-color: pink
         position: relative
-        background-color: gold
-        transition: 0.3s
-        a
-            width: 85px
-            background-color: #F4F6FF
-            display: block
-            float: right
-            text-align: center
-            border-radius: 50px
-            font-size: 10px
-            line-height: 10px
-            padding: 4px 0
-            margin-top: 10px
+        >a
+            background-color: #EB5757
+            line-height: 48px
+            width: 48px
+            position: absolute
+            right: 0
+            top: 0
+        p
+            float: left
+            line-height: 48px
+            // background-color: red
+            padding: 0
+
+        .participantInfo
+            z-index: 5
+            padding: 0 24px
+            overflow: hidden
+            position: relative
+            background-color: white
+            transition: 0.3s
+            a
+                width: 85px
+                background-color: #F4F6FF
+                display: block
+                float: right
+                text-align: center
+                border-radius: 50px
+                font-size: 10px
+                line-height: 10px
+                padding: 4px 0
+                margin-top: 10px
+.bottomBtn
+    font-size: 14px
+    text-align: center
+    margin: 24px
+    background-color: #F4F6FF
+    display: block
+    border-radius: 32px
+    line-height: 16px
+    padding: 16px
