--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 body {
   font-family: sans-serif;
+  background-image: url("Gradient.png");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 a {
@@ -25,13 +28,24 @@ h1 {
   z-index: 7;
 }
 
+.participantSection {
+  background-color: #fff;
+  padding-bottom: 24px;
+}
+
+.participantSection:last-of-type {
+  padding-top: 24px;
+  margin-bottom: 97px;
+}
+
 p {
   color: #282C32;
   padding: 0px 24px 24px;
   font-size: 12px;
+  background-color: #fff;
 }
 
-.topParagraph {
+.participantSection:first-of-type .topParagraph {
   margin-top: 120px;
 }
 
@@ -46,24 +60,29 @@ p {
   font-size: 12px;
   line-height: 14px;
   padding: 21px 12px;
-  margin: 0 24px 24px;
+  margin: 0 24px;
   text-align: center;
   border-radius: 8px;
 }
 
-ul {
-  background-color: #F4F6FF;
-}
 ul li {
   position: relative;
+  margin-bottom: 1px;
+}
+ul li:first-child {
+  margin-top: 1px;
 }
 ul li > a {
   background-color: #EB5757;
   line-height: 48px;
   width: 48px;
+  height: 48px;
   position: absolute;
   right: 0;
   top: 0;
+  background-image: url("delete.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 ul li p {
   float: left;
@@ -91,10 +110,18 @@ ul li .participantInfo a {
   margin-top: 10px;
 }
 
-.bottomBtn {
+footer {
+  background-color: #fff;
+  padding: 24px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  z-index: 10;
+  box-sizing: border-box;
+}
+footer .bottomBtn {
   font-size: 14px;
   text-align: center;
-  margin: 24px;
   background-color: #F4F6FF;
   display: block;
   border-radius: 32px;
