--- a/participantList.css
+++ b/participantList.css
@@ -127,4 +127,4 @@ footer .bottomBtn {
   border-radius: 32px;
   line-height: 16px;
   padding: 16px;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=participantList.css.map */
