--- a/participantList.css
+++ b/participantList.css
@@ -1,10 +1,14 @@
+@font-face {
+  font-family: "SF UI Display";
+  src: url("sf-ui-display-light-58646b33e0551.otf");
+}
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "SF UI Display", sans-serif;
   background-image: url("Gradient.png");
   background-size: cover;
   background-attachment: fixed;
@@ -13,7 +17,7 @@ body {
 a {
   text-decoration: none;
   color: #121212;
-  font-family: sans-serif;
+  font-family: "SF UI Display", sans-serif;
 }
 
 h1 {
