--- a/participantList.sass
+++ b/participantList.sass
@@ -1,17 +1,20 @@
+@font-face
+    font-family: "SF UI Display"
+    src: url('sf-ui-display-light-58646b33e0551.otf')
 *
     margin: 0
     padding: 0
 body
-    font-family: sans-serif
+    font-family: "SF UI Display", sans-serif
     background-image: url("Gradient.png")
     background-size: cover
     background-attachment: fixed
 a
     text-decoration: none
     color: #121212
-    font-family: sans-serif
+    font-family: "SF UI Display", sans-serif
 h1
-    color:#282C32
+    color: #282C32
     padding: 48px 24px 24px
     background-color: white
     position: fixed
