--- a/registration.sass
+++ b/registration.sass
@@ -43,7 +43,7 @@ form
     margin-top: 24px
     padding: 24px
     font-size: 0
-    input
+    >input, .addingCheckbox
         height: 24px
         width: 24px
         border-radius: 4px
@@ -80,3 +80,9 @@ form
         border: none
         font-family: "SF UI Display", sans-serif
         color: #fff
+.smallParagraph
+    font-size: 10px
+    line-height: 14px
+    padding-bottom: 4px
+    padding-top: 8px
+    margin-bottom: 0
