--- a/feeCreation.sass
+++ b/feeCreation.sass
@@ -4,7 +4,8 @@ h1
 .formFooter
     input
         vertical-align: middle !important
-
+body
+    background-image: url("feeCreation.png")
 label
     font-size: 14px !important
     vertical-align: middle !important
