--- a/feeCreation.sass
+++ b/feeCreation.sass
@@ -1,3 +1,6 @@
+@font-face
+    font-family: "SF UI Display"
+    src: url('sf-ui-display-light-58646b33e0551.otf')
 h1
     padding-top: 48px
 
@@ -6,6 +9,7 @@ h1
         vertical-align: middle !important
 body
     background-image: url("feeCreation.png")
+    font-family: "SF UI Display", sans-serif
 label
     font-size: 14px !important
     vertical-align: middle !important
@@ -92,4 +96,3 @@ label
         &:nth-child(2)
             width: 66px
             margin-left: 10px
-            
