--- a/feeHistory.sass
+++ b/feeHistory.sass
@@ -4,6 +4,62 @@
 *
     margin: 0
     padding: 0
+body
+    font-family: "SF UI Display", sans-serif
+a
+    text-decoration: none
+    color: #121212
+    font-family: "SF UI Display", sans-serif
+h1
+    color: #282C32
+    padding: 48px 24px 0px
+    background-color: white
+    width: 100%
+    line-height: 24px
+    font-size: 24px
+    top: 0
+    box-sizing: border-box
+.companyInfo
+    padding: 24px
+    box-sizing: border-box
+    a
+        background: #fff
+        border: 1px solid #788BF000
+        border-radius: 36px
+        line-height: 24px
+        height: 24px
+        display: inline-block
+        padding: 0 8px
+        font-size: 10px
+        box-sizing: border-box
+        vertical-align: middle
+        width: calc((100% - 40px) / 4)
+        text-align: center
+    .active
+        border: 1px solid #788BF0
+    .calendarButton
+        width: 24px
+        background-image: url("calendar.svg")
+        background-repeat: no-repeat
+        background-size: 60%
+        background-position: center
+table
+    border-spacing: 0
+    border-collapse:separate
+    border-spacing: 0 5px
+    margin-top: 24px
+    tr
+        // margin-bottom: 5px
+        // &:last-child
+            // margin-bottom: 0
+        td
+            vertical-align: top
+            padding-right: 8px
+            // background-color: gold
+            &:first-child
+                color: #788BF0
+            &:last-child
+                padding-right: 0
 footer
     background-color: #fff
     padding: 24px
