--- a/feeHistory.css
+++ b/feeHistory.css
@@ -7,6 +7,72 @@
   padding: 0;
 }
 
+body {
+  font-family: "SF UI Display", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #121212;
+  font-family: "SF UI Display", sans-serif;
+}
+
+h1 {
+  color: #282C32;
+  padding: 48px 24px 0px;
+  background-color: white;
+  width: 100%;
+  line-height: 24px;
+  font-size: 24px;
+  top: 0;
+  box-sizing: border-box;
+}
+
+.companyInfo {
+  padding: 24px;
+  box-sizing: border-box;
+}
+.companyInfo a {
+  background: #fff;
+  border: 1px solid rgba(120, 139, 240, 0);
+  border-radius: 36px;
+  line-height: 24px;
+  height: 24px;
+  display: inline-block;
+  padding: 0 8px;
+  font-size: 10px;
+  box-sizing: border-box;
+  vertical-align: middle;
+  width: calc((100% - 40px) / 4);
+  text-align: center;
+}
+.companyInfo .active {
+  border: 1px solid #788BF0;
+}
+.companyInfo .calendarButton {
+  width: 24px;
+  background-image: url("calendar.svg");
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position: center;
+}
+
+table {
+  border-spacing: 0;
+  border-spacing: 0 5px;
+  margin-top: 24px;
+}
+table tr td {
+  vertical-align: top;
+  padding-right: 8px;
+}
+table tr td:first-child {
+  color: #788BF0;
+}
+table tr td:last-child {
+  padding-right: 0;
+}
+
 footer {
   background-color: #fff;
   padding: 24px;
