--- a/feeHistory3.sass
+++ b/feeHistory3.sass
@@ -6,9 +6,9 @@
     padding: 0
 body
     font-family: "SF UI Display", sans-serif
-    background-image: url("Gradient.png")
-    background-size: cover
-    background-attachment: fixed
+    // background-image: url("Gradient.png")
+    // background-size: cover
+    // background-attachment: fixed
 a
     text-decoration: none
     color: #121212
