--- a/companySettings.sass
+++ b/companySettings.sass
@@ -91,6 +91,7 @@ header
             overflow: hidden
             padding: 6px 12px
             margin-bottom: 1px
+            line-height: 18px
             &:last-child
                 margin-bottom: 0
             p
