--- a/companySettings.css
+++ b/companySettings.css
@@ -115,6 +115,7 @@ header {
   overflow: hidden;
   padding: 6px 12px;
   margin-bottom: 1px;
+  line-height: 18px;
 }
 .companyInfo ul li:last-child {
   margin-bottom: 0;
