--- a/registration.sass
+++ b/registration.sass
@@ -86,3 +86,34 @@ form
     padding-bottom: 4px
     padding-top: 8px
     margin-bottom: 0
+.dateInput
+    position: relative
+    width: calc(100% - 48px)
+    // background-color: pink
+    margin: auto
+    overflow: hidden
+    margin-top: 16px
+    label
+        line-height: 40px
+        border-radius: 8px
+        font-family: "SF UI Display", sans-serif
+        padding: 0 12px
+        box-sizing: border-box
+        border: 1px solid #BDBDBD
+        display: block
+        margin: auto
+        font-size: 14px
+        color: #757575
+    input
+        position: absolute
+        width: 1px
+        // width: calc(100% - 48px)
+        height: 42px
+        top: 0
+        box-sizing: border-box
+        left: 50%
+        // right: 0
+        // transform: scaleX(90)
+        border: none
+        background-color: gold
+        opacity: 0
