--- a/registration.css
+++ b/registration.css
@@ -105,4 +105,35 @@ form > input {
   padding-bottom: 4px;
   padding-top: 8px;
   margin-bottom: 0;
+}
+
+.dateInput {
+  position: relative;
+  width: calc(100% - 48px);
+  margin: auto;
+  overflow: hidden;
+  margin-top: 16px;
+}
+.dateInput label {
+  line-height: 40px;
+  border-radius: 8px;
+  font-family: "SF UI Display", sans-serif;
+  padding: 0 12px;
+  box-sizing: border-box;
+  border: 1px solid #BDBDBD;
+  display: block;
+  margin: auto;
+  font-size: 14px;
+  color: #757575;
+}
+.dateInput input {
+  position: absolute;
+  width: 1px;
+  height: 42px;
+  top: 0;
+  box-sizing: border-box;
+  left: 50%;
+  border: none;
+  background-color: gold;
+  opacity: 0;
 }/*# sourceMappingURL=registration.css.map */
