--- a/participantList.sass
+++ b/participantList.sass
@@ -78,6 +78,8 @@ ul
             position: relative
             background-color: white
             transition: 0.3s
+            display: flex
+            justify-content: space-between
             a
                 width: 85px
                 background-color: #F4F6FF
@@ -89,6 +91,7 @@ ul
                 line-height: 10px
                 padding: 4px 0
                 margin-top: 10px
+                height: 20px
 footer
     background-color: #fff
     padding: 24px
