--- a/registration.sass
+++ b/registration.sass
@@ -54,13 +54,13 @@ form
         cursor: pointer
         box-sizing: border-box
         display: inline-block
-        vertical-align: top
+        vertical-align: middle
         &:checked
             appearance: auto
             -webkit-appearance: auto
     label
         display: inline-block
-        vertical-align: top
+        vertical-align: middle
         width: calc(100% - 24px)
         font-size: 10px
         padding-left: 16px
