--- a/feeHistory3.sass
+++ b/feeHistory3.sass
@@ -44,11 +44,15 @@ h1
         overflow: hidden
         .buttonInfo
             float: left
+            font-size: 0
+            line-height: 22px
             img
                 vertical-align: middle
+                margin-right: 4px
             p
                 display: inline-block
                 vertical-align: middle
+                font-size: 10px
         >p
             float: right
     .active
