--- a/participantList.css
+++ b/participantList.css
@@ -100,6 +100,8 @@ ul li .participantInfo {
   position: relative;
   background-color: white;
   transition: 0.3s;
+  display: flex;
+  justify-content: space-between;
 }
 ul li .participantInfo a {
   width: 85px;
@@ -112,6 +114,7 @@ ul li .participantInfo a {
   line-height: 10px;
   padding: 4px 0;
   margin-top: 10px;
+  height: 20px;
 }
 
 footer {
