--- a/registration.css
+++ b/registration.css
@@ -36,7 +36,7 @@ p {
   margin-bottom: 24px;
 }
 
-form > input {
+form > input, form select {
   line-height: 40px;
   border-radius: 8px;
   font-family: "SF UI Display", sans-serif;
@@ -47,6 +47,15 @@ form > input {
   margin: auto;
   width: calc(100% - 48px);
   margin-top: 16px;
+  background-color: #fff;
+  height: 40px;
+}
+form select {
+  margin-bottom: 16px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
 }
 
 .formFooter {
@@ -125,6 +134,7 @@ form > input {
   margin: auto;
   font-size: 14px;
   color: #757575;
+  background-color: #fff;
 }
 .dateInput input {
   position: absolute;
@@ -134,6 +144,5 @@ form > input {
   box-sizing: border-box;
   left: 50%;
   border: none;
-  background-color: gold;
   opacity: 0;
 }/*# sourceMappingURL=registration.css.map */
