--- a/registration.sass
+++ b/registration.sass
@@ -27,7 +27,7 @@ p
     font-size: 14px
     margin-bottom: 24px
 form
-    >input
+    >input, select
         line-height: 40px
         border-radius: 8px
         font-family: "SF UI Display", sans-serif
@@ -38,6 +38,14 @@ form
         margin: auto
         width: calc(100% - 48px)
         margin-top: 16px
+        background-color: #fff
+        height: 40px
+    select
+        margin-bottom: 16px
+        -webkit-appearance: none
+        -moz-appearance: none
+        text-indent: 1px
+        text-overflow: ''
 .formFooter
     box-shadow: 0px -12px 32px rgba(167, 161, 208, 0.25)
     margin-top: 24px
@@ -104,6 +112,7 @@ form
         margin: auto
         font-size: 14px
         color: #757575
+        background-color: #fff
     input
         position: absolute
         width: 1px
@@ -115,5 +124,5 @@ form
         // right: 0
         // transform: scaleX(90)
         border: none
-        background-color: gold
+        // background-color: gold
         opacity: 0
