--- a/companySettings.sass
+++ b/companySettings.sass
@@ -74,6 +74,20 @@ header
         text-align: center
     .active
         border: 1px solid #788BF0
+    .calendar
+        display: inline-block
+        width: 24px
+        position: relative
+        overflow: hidden
+        vertical-align: middle
+        input
+            top: 0
+            left: 50%
+            width: 10px
+            height: 24px
+            position: absolute
+            transform: scaleX(3)
+            opacity: 0
     .calendarButton
         width: 24px
         background-image: url("calendar.svg")
