--- a/feeHistory.css
+++ b/feeHistory.css
@@ -49,6 +49,22 @@ h1 {
 .companyInfo .active {
   border: 1px solid #788BF0;
 }
+.companyInfo .calendar {
+  display: inline-block;
+  width: 24px;
+  position: relative;
+  overflow: hidden;
+  vertical-align: middle;
+}
+.companyInfo input {
+  top: 0;
+  left: 50%;
+  width: 10px;
+  height: 24px;
+  position: absolute;
+  transform: scaleX(3);
+  opacity: 0;
+}
 .companyInfo .calendarButton {
   width: 24px;
   background-image: url("calendar.svg");
@@ -59,6 +75,7 @@ h1 {
 
 table {
   border-spacing: 0;
+  border-collapse: separate;
   border-spacing: 0 5px;
   margin-top: 24px;
 }
