--- a/participantList.css
+++ b/participantList.css
@@ -89,8 +89,7 @@ ul li > a {
   background-position: center;
 }
 ul li p {
-  float: left;
-  line-height: 48px;
+  line-height: 20px;
   padding: 0;
 }
 ul li .participantInfo {
@@ -102,6 +101,24 @@ ul li .participantInfo {
   transition: 0.3s;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+ul li .participantInfo section {
+  flex-direction: column;
+  display: flex;
+  height: 48px;
+  justify-content: center;
+}
+ul li .participantInfo section:last-child {
+  flex-direction: row;
+  align-items: center;
+}
+ul li .participantInfo section span {
+  line-height: 14px;
+  font-size: 10px;
+}
+ul li .participantInfo section p {
+  padding-right: 10px;
 }
 ul li .participantInfo a {
   width: 85px;
@@ -113,7 +130,6 @@ ul li .participantInfo a {
   font-size: 10px;
   line-height: 10px;
   padding: 4px 0;
-  margin-top: 10px;
   height: 20px;
 }
 
