--- a/companyRegistration2.sass
+++ b/companyRegistration2.sass
@@ -21,6 +21,7 @@ form
     >input
         margin-bottom: 16px
         margin-top: 0
+        font-size: 14px
 footer
     background-color: #fff
     padding: 24px
