--- a/companyRegistration2.sass
+++ b/companyRegistration2.sass
@@ -18,6 +18,8 @@ body
     background-position: center top
     background-repeat: no-repeat
 form
+    overflow: hidden
+    margin-bottom: 100px
     >input
         margin-bottom: 16px
         margin-top: 0
