--- a/registration.css
+++ b/registration.css
@@ -14,6 +14,7 @@ body {
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
+  background-color: #fff;
 }
 
 img {
