--- a/registration.sass
+++ b/registration.sass
@@ -12,6 +12,7 @@ body
     background-size: cover
     background-position: center top
     background-repeat: no-repeat
+    background-color: #fff
 img
     display: block
     margin: auto
