--- a/feeHistory.sass
+++ b/feeHistory.sass
@@ -40,23 +40,29 @@ h1
     .calendar
         display: inline-block
         width: 24px
+        height: 24px
         position: relative
         overflow: hidden
         vertical-align: middle
     input
-        top: 0
-        left: 50%
-        width: 10px
-        height: 24px
-        position: absolute
-        transform: scaleX(3)
-        opacity: 0
-    .calendarButton
         width: 24px
+        height: 24px
+        // pointer-events: none
         background-image: url("calendar.svg")
         background-repeat: no-repeat
         background-size: 60%
+        border: none
+        outline: none
+        color: #00000000
         background-position: center
+        
+    .calendarButton
+        width: 24px
+        display: block
+        height: 24px
+        position: absolute
+        left: 0
+        top: 0
 table
     border-spacing: 0
     border-collapse: separate
