--- a/feeCreation.css
+++ b/feeCreation.css
@@ -108,10 +108,15 @@ label {
   width: 100%;
   margin-top: 16px;
 }
-.addingOptions input:first-child {
+.addingOptions .dateCont {
+  display: inline-block;
   width: calc(100% - 76px);
 }
-.addingOptions input:nth-child(2) {
+.addingOptions .timeCont {
+  display: inline-block;
   width: 66px;
   margin-left: 10px;
+}
+.addingOptions .timeCont input {
+  width: 100%;
 }/*# sourceMappingURL=feeCreation.css.map */
