--- a/feeCreation.sass
+++ b/feeCreation.sass
@@ -86,8 +86,12 @@ label
         margin: auto
         width: 100%
         margin-top: 16px
-        &:first-child
-            width: calc(100% - 76px)
-        &:nth-child(2)
-            width: 66px
-            margin-left: 10px
+    .dateCont
+        display: inline-block
+        width: calc(100% - 76px)
+    .timeCont
+        display: inline-block
+        width: 66px
+        margin-left: 10px
+        input
+            width: 100%
